[tool.poetry]
name = "cli-bot"
version = "0.1.0"
description = ""
authors = ["Maksym Sydorenko <maksym.sy96@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
click = "^8.1.8"
isort = "^5.13.2"
mypy-extensions = "^1.0.0"
packaging = "^24.2"
pathspec = "^0.12.1"
platformdirs = "^4.3.6"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88            # Maximum line length, aligns with PEP 8
target-version = ["py38", "py39", "py310", "py311"]  # Specify Python versions your project supports
skip-string-normalization = false   # Allow Black to normalize string quotes
include = '\.pyi?$'         # Include Python files and stubs
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''